bk_ida/gccida/c0/get_secondary_mem
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_secondary_mem/src/reload.c:1048:32: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  get_secondary_mem( rtx x, machine_mode mode, int opnum, reload_type type) 
                               ^
                               enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_secondary_mem/src/reload.c:1048:62: error: must use 'enum' tag to refer to type 'reload_type'
rtx  get_secondary_mem( rtx x, machine_mode mode, int opnum, reload_type type) 
                                                             ^
                                                             enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_secondary_mem/src/reload.c:1054:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v9; // [rsp+20h] [rbp-30h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_secondary_mem/src/reload.c:1057:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modea; // [rsp+3Ch] [rbp-14h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_secondary_mem/src/reload.c:1065:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& ( mode_class_0[modea] == MODE_INT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_secondary_mem/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_secondary_mem/src/reload.c:1066:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[modea] == MODE_PARTIAL_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_secondary_mem/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_secondary_mem/src/reload.c:1067:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[modea] == MODE_COMPLEX_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_secondary_mem/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_secondary_mem/src/reload.c:1068:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[modea] == MODE_VECTOR_INT) ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_secondary_mem/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_secondary_mem/src/reload.c:1073:28: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
modea = mode_for_size( v6, mode_class_0[modea], 0); 
                           ^~~~~~~~~~~~
                           mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_secondary_mem/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_secondary_mem/src/obj/reload.o] Error 1
